--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
+    "tsx": "^3.12.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-dedale": "^0.0.13"
+  },
+  "dependencies": {
+    "@types/sharp": "^0.31.1",
+    "sharp": "^0.31.3"
   }
 }
